--- a/.htaccess
+++ b/.htaccess
@@ -16,8 +16,8 @@ Header always set X-XSS-Protection "1; mode=block"
 # Cross-Origin-Opener-Policy per isolamento origine
 Header always set Cross-Origin-Opener-Policy "same-origin"
 
-# Content Security Policy completa con Google Analytics e Trusted Types
-Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://www.google-analytics.com; connect-src 'self' https://www.google-analytics.com https://www.googletagmanager.com; require-trusted-types-for 'script';"
+# Content Security Policy completa con Google Analytics GA4
+Header always set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://ssl.google-analytics.com https://fonts.googleapis.com https://tagmanager.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://tagmanager.google.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://www.google-analytics.com https://ssl.google-analytics.com https://www.googletagmanager.com https://googletagmanager.com https://region1.google-analytics.com https://stats.g.doubleclick.net; connect-src 'self' https://www.google-analytics.com https://ssl.google-analytics.com https://www.googletagmanager.com https://region1.google-analytics.com https://analytics.google.com https://stats.g.doubleclick.net https://googletagmanager.com;"
 
 # Referrer Policy
 Header always set Referrer-Policy "strict-origin-when-cross-origin"
@@ -43,15 +43,61 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
     AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
-# Cache Headers per prestazioni
+# Cache Headers ottimizzati per prestazioni - PageSpeed Insights
 <IfModule mod_expires.c>
     ExpiresActive On
+    # CSS e JavaScript - 1 anno
     ExpiresByType text/css "access plus 1 year"
     ExpiresByType application/javascript "access plus 1 year"
+    ExpiresByType text/javascript "access plus 1 year"
+    
+    # Immagini - 1 anno
     ExpiresByType image/png "access plus 1 year"
     ExpiresByType image/jpg "access plus 1 year"
     ExpiresByType image/jpeg "access plus 1 year"
     ExpiresByType image/gif "access plus 1 year"
     ExpiresByType image/webp "access plus 1 year"
     ExpiresByType image/svg+xml "access plus 1 year"
+    ExpiresByType image/x-icon "access plus 1 year"
+    
+    # Font - 1 anno
+    ExpiresByType font/woff "access plus 1 year"
+    ExpiresByType font/woff2 "access plus 1 year"
+    ExpiresByType application/font-woff "access plus 1 year"
+    ExpiresByType application/font-woff2 "access plus 1 year"
+    
+    # HTML - 1 ora (per aggiornamenti contenuti)
+    ExpiresByType text/html "access plus 1 hour"
 </IfModule>
+
+# Cache-Control Headers espliciti e aggressivi
+<IfModule mod_headers.c>
+    # CSS e JavaScript - Cache aggressiva
+    <FilesMatch "\.(css|js)$">
+        Header unset ETag
+        Header set Cache-Control "public, max-age=31536000, immutable"
+        Header set Expires "Thu, 31 Dec 2025 23:59:59 GMT"
+    </FilesMatch>
+    
+    # Immagini - Cache aggressiva
+    <FilesMatch "\.(png|jpg|jpeg|gif|webp|svg|ico)$">
+        Header unset ETag
+        Header set Cache-Control "public, max-age=31536000, immutable"
+        Header set Expires "Thu, 31 Dec 2025 23:59:59 GMT"
+    </FilesMatch>
+    
+    # Font - Cache aggressiva
+    <FilesMatch "\.(woff|woff2|ttf|eot)$">
+        Header unset ETag
+        Header set Cache-Control "public, max-age=31536000, immutable"
+        Header set Expires "Thu, 31 Dec 2025 23:59:59 GMT"
+    </FilesMatch>
+    
+    # HTML - Cache breve per aggiornamenti
+    <FilesMatch "\.html$">
+        Header set Cache-Control "public, max-age=3600"
+    </FilesMatch>
+</IfModule>
+
+# Rimozione ETag per migliorare cache
+FileETag None
