--- a/.htaccess
+++ b/.htaccess
@@ -34,6 +34,10 @@ RewriteEngine On
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
+# Redirect 301 per URL obsoleti o errati
+Redirect 301 /grate-inferriate https://www.fbtotalsecurity.com/serramenti.html
+Redirect 301 /grate-inferriate/ https://www.fbtotalsecurity.com/serramenti.html
+
 # Compressione Gzip per prestazioni
 <IfModule mod_deflate.c>
     AddOutputFilterByType DEFLATE text/plain
