--- a/.htaccess
+++ b/.htaccess
@@ -54,12 +54,12 @@ Redirect 301 /grate-inferriate/ https://www.fbtotalsecurity.com/serramenti.html
 # Cache Headers ottimizzati per prestazioni - PageSpeed Insights
 <IfModule mod_expires.c>
     ExpiresActive On
-    # CSS e JavaScript - 1 anno
+    # CSS e JavaScript - 1 anno con immutable
     ExpiresByType text/css "access plus 1 year"
     ExpiresByType application/javascript "access plus 1 year"
     ExpiresByType text/javascript "access plus 1 year"
     
-    # Immagini - 1 anno
+    # Immagini - 1 anno con immutable
     ExpiresByType image/png "access plus 1 year"
     ExpiresByType image/jpg "access plus 1 year"
     ExpiresByType image/jpeg "access plus 1 year"
@@ -67,15 +67,23 @@ Redirect 301 /grate-inferriate/ https://www.fbtotalsecurity.com/serramenti.html
     ExpiresByType image/webp "access plus 1 year"
     ExpiresByType image/svg+xml "access plus 1 year"
     ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresByType image/avif "access plus 1 year"
     
-    # Font - 1 anno
+    # Font - 1 anno con immutable
     ExpiresByType font/woff "access plus 1 year"
     ExpiresByType font/woff2 "access plus 1 year"
     ExpiresByType application/font-woff "access plus 1 year"
     ExpiresByType application/font-woff2 "access plus 1 year"
+    ExpiresByType font/ttf "access plus 1 year"
+    ExpiresByType font/otf "access plus 1 year"
     
     # HTML - 1 ora (per aggiornamenti contenuti)
     ExpiresByType text/html "access plus 1 hour"
+    
+    # JSON e XML - 1 giorno
+    ExpiresByType application/json "access plus 1 day"
+    ExpiresByType application/xml "access plus 1 day"
+    ExpiresByType text/xml "access plus 1 day"
 </IfModule>
 
 # Cache-Control Headers espliciti e aggressivi
